# lastexecrecord

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lastexecuterecord.sample.json  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
.github/agents/: cpp-windows-development.instructions.md
.github/workflows/: build-and-test.yml  release.yml
docs/: config-schema.md  decisions.md  handover.md  implementation-map.md  security-notes.md  unit-test-design-twada.md
src/: README.md  README.vcpkg-tests.md  lastexecrecord.sln  lastexecrecord.sln.bak  vcpkg-configuration.json  vcpkg.json
src/docs/: MSTEST-MIGRATION.md  mstest-migration-tasklist.md  unit-test-design-twada.md
src/lastexecuterecord/: CommandRunner.cpp  CommandRunner.h  Config.cpp  Config.h  FileUtil.cpp  FileUtil.h  Json.cpp  Json.h  NetworkUtil.cpp  NetworkUtil.h  README.md  TimeUtil.cpp  TimeUtil.h  lastexecuterecord.vcxproj  lastexecuterecord.vcxproj.filters  main.cpp
src/lastexecuterecord.core/: lastexecuterecord.core.vcxproj
src/lastexecuterecord.mstest/: CommandRunnerTests.cpp  ConfigTests.cpp  FileUtilTests.cpp  JsonTests.cpp  NetworkUtilTests.cpp  TimeUtilTests.cpp  lastexecuterecord.mstest.vcxproj
src/lastexecuterecord.tests/: CommandRunner.tests.cpp  Config.tests.cpp  Json.tests.cpp  TimeUtil.tests.cpp  lastexecuterecord.tests.vcxproj  lastexecuterecord.tests.vcxproj.filters  main.tests.cpp
src/src/lastexecuterecord.core/: lastexecuterecord.core.vcxproj.filters
tests/: CMakeLists.txt  CommandRunner.tests.cpp  Config.tests.cpp  FileUtil.tests.cpp  Json.tests.cpp  README.md  TimeUtil.tests.cpp  test_main.cpp
